完成基本环境搭建

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>药代首页</title>
 </head>
 <body>
-<div id="root-container"></div>
+<div id="container"></div>
 <script src="static/bundle.js"></script>
 </body>
 </html>
