testing flexible.js and preventoverflow

--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-touch-fullscreen" content="no"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-    <link rel="shortcut icon" type="image/x-icon" href="libs/img/kad_logo.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="#"/>
     <title>加载中...</title>
-    <link rel="stylesheet"  href="app/libs/css/main.css"/>
+    <script src="/app/libs/js/flexible.js" inline></script>
+    <link rel="stylesheet" href="/app/libs/css/main.css"/>
 </head>
-<body>
-<div id="container"></div>
-<script src="static/bundle.js"></script>
+<body id="wrapper">
+<div id="ma-header">
+    <h1 class="ma-header-title">Hello Allen</h1>
+</div>
+<div id="container">
+    <ul class="ma-list">
+
+    </ul>
+</div>
+<script src="/static/bundle.js"></script>
 </body>
 </html>
